# calibration_tool

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TODO.md
.circleci/: config.yml
cmake/: build_helpers.cmake  cpack_config.cmake  package.linux.txt
cmake_modules/: FindTBB.cmake
config/: tumvi_aprilgrid_6x6.json
include/: app_state.hpp
include/calibration/: aprilgrid.h  aprilgrid.hpp  calibration_data.h  calibration_data.hpp  calibration_helper.h  calibrator.hpp
include/io/: aprilgrid_container.h  dataset_io.h  rosbag_container.h
include/recorder/: better_bag.hpp  dataset.hpp  presets.hpp
include/ui/: view.hpp  window.hpp
include/ui/views/: view_corner_detector.hpp  view_recorder.hpp  view_rosbag_inspector.hpp
include/utils/: common_types.h  enum.h  filesystem.h  utils.hpp
priors/: calibration-prior-kb4.json  calibration-prior-radtan8.json  vk180-prior-ds.json  vk180-prior.json  vkl-m12-prior-ds.json  vkl-m12-prior.json
src/: app_state.cpp  main.cpp
src/calibration/: aprilgrid.cpp  aprilgrid.h  calibration_data.h  calibration_helper.cpp  calibration_helper.h  calibrator.cpp
src/corner_detection/: detect_corner.h
src/dataset_io/: dataset_io.h
src/gui/: app_state.h  gui.cpp  gui.h  gui.hpp  imports.h  plot_error.h  rosbag_inspector.h
src/gui/widgets/: checkerboard_config.h  corner_detection_config.h  img_display.h  live_view.hpp  plot_error.h  recorder_config.hpp  rosbag_inspector.h
src/io/: aprilgrid_container.h  dataset_io.cpp  dataset_io.h  dataset_io_rosbag.h  files_container.h  rosbag_container.h
src/recorder/: dataset.cpp  presets.cpp
src/ui/: view.cpp  window.cpp
src/ui/views/: view_corner_detector.cpp  view_recorder.cpp  view_rosbag_inspector.cpp
src/utils/: colors.h  common_types.h  utils.cpp  utils.h  utils.hpp
